3.6.3/_sources/gallery/spines/spine_placement_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/spines/spine_placement_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_spines_spine_placement_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_spines_spine_placement_demo.py:


===============
Spine placement
===============

The position of the axis spines can be influenced using `~.Spine.set_position`.

Note: If you want to obtain arrow heads at the ends of the axes, also check
out the :doc:`/gallery/spines/centered_spines_with_arrows` example.

.. GENERATED FROM PYTHON SOURCE LINES 11-15

.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt









.. GENERATED FROM PYTHON SOURCE LINES 16-53

.. code-block:: default


    x = np.linspace(0, 2*np.pi, 100)
    y = 2 * np.sin(x)

    fig, ax_dict = plt.subplot_mosaic(
        [['center', 'zero'],
         ['axes', 'data']]
    )
    fig.suptitle('Spine positions')


    ax = ax_dict['center']
    ax.set_title("'center'")
    ax.plot(x, y)
    ax.spines[['left', 'bottom']].set_position('center')
    ax.spines[['top', 'right']].set_visible(False)

    ax = ax_dict['zero']
    ax.set_title("'zero'")
    ax.plot(x, y)
    ax.spines[['left', 'bottom']].set_position('zero')
    ax.spines[['top', 'right']].set_visible(False)

    ax = ax_dict['axes']
    ax.set_title("'axes' (0.2, 0.2)")
    ax.plot(x, y)
    ax.spines.left.set_position(('axes', 0.2))
    ax.spines.bottom.set_position(('axes', 0.2))
    ax.spines[['top', 'right']].set_visible(False)

    ax = ax_dict['data']
    ax.set_title("'data' (1, 2)")
    ax.plot(x, y)
    ax.spines.left.set_position(('data', 1))
    ax.spines.bottom.set_position(('data', 2))
    ax.spines[['top', 'right']].set_visible(False)




.. image-sg:: /gallery/spines/images/sphx_glr_spine_placement_demo_001.png
   :alt: Spine positions, 'center', 'zero', 'axes' (0.2, 0.2), 'data' (1, 2)
   :srcset: /gallery/spines/images/sphx_glr_spine_placement_demo_001.png, /gallery/spines/images/sphx_glr_spine_placement_demo_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 54-55

Define a method that adjusts the location of the axis spines

.. GENERATED FROM PYTHON SOURCE LINES 55-78

.. code-block:: default



    def adjust_spines(ax, spines):
        for loc, spine in ax.spines.items():
            if loc in spines:
                spine.set_position(('outward', 10))  # outward by 10 points
            else:
                spine.set_color('none')  # don't draw spine

        # turn off ticks where there is no spine
        if 'left' in spines:
            ax.yaxis.set_ticks_position('left')
        else:
            # no yaxis ticks
            ax.yaxis.set_ticks([])

        if 'bottom' in spines:
            ax.xaxis.set_ticks_position('bottom')
        else:
            # no xaxis ticks
            ax.xaxis.set_ticks([])









.. GENERATED FROM PYTHON SOURCE LINES 79-80

Create another figure using our new ``adjust_spines`` method

.. GENERATED FROM PYTHON SOURCE LINES 80-103

.. code-block:: default


    fig = plt.figure()

    x = np.linspace(0, 2 * np.pi, 100)
    y = 2 * np.sin(x)

    ax = fig.add_subplot(2, 2, 1)
    ax.plot(x, y, clip_on=False)
    adjust_spines(ax, ['left'])

    ax = fig.add_subplot(2, 2, 2)
    ax.plot(x, y, clip_on=False)
    adjust_spines(ax, [])

    ax = fig.add_subplot(2, 2, 3)
    ax.plot(x, y, clip_on=False)
    adjust_spines(ax, ['left', 'bottom'])

    ax = fig.add_subplot(2, 2, 4)
    ax.plot(x, y, clip_on=False)
    adjust_spines(ax, ['bottom'])

    plt.show()



.. image-sg:: /gallery/spines/images/sphx_glr_spine_placement_demo_002.png
   :alt: spine placement demo
   :srcset: /gallery/spines/images/sphx_glr_spine_placement_demo_002.png, /gallery/spines/images/sphx_glr_spine_placement_demo_002_2_0x.png 2.0x
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.007 seconds)


.. _sphx_glr_download_gallery_spines_spine_placement_demo.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: spine_placement_demo.py <spine_placement_demo.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: spine_placement_demo.ipynb <spine_placement_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
